--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -54,8 +54,8 @@
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-envelope"></span>
           </span>
-                                <input type="text" th:field="*{rollNo}"
-                                       placeholder="RollNo" class="form-control" required/>
+                                <input type="text" th:field="*{username}"
+                                       placeholder="User Name" class="form-control" required/>
                                 <span class="glyphicon form-control-feedback"
                                       aria-hidden="true"></span>
 
