--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>IQuery</title>
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link th:href="@{css/home.css}" rel="stylesheet"/>
+
+    <script
+            src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
 </head>
 <body>
-<p>Welcome
-</p>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">IQuery</a>
+        </div>
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a class="nav-link active" href="#">
+                            <i class="fa fa-edit"></i>
+                            Read <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li style="margin-left: 20px">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-pencil"></i>
+                            Answer</a>
+                    </li>
+                    <li style="margin-left: 20px">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-user"></i>
+                            Profile</a>
+                    </li>
+                </ul>
+                <button type="button" id="newQuestion" style="margin-left: 20px" class="btn btn-danger navbar-btn" data-toggle="modal" data-target="#questionModal">New Question</button>
+            </div>
+        </nav>
+        <ul class="navbar-dark bg-dark ulcustom w3-light-grey">
+
+            <li><a class="active aside" href="#">Top Stories</a></li>
+            <li><a class="aside" href="#">Your Questions</a></li>
+        </ul>
+
+    <!--<div class="card-body">-->
+        <!--<h4 class="card-title heading">Heading of the question?</h4>-->
+        <!--<p class="card-text">date: 14 March </p>-->
+        <!--<hr>-->
+        <!--<br>-->
+        <!--<p class="card-text writer">Answer written by: ankit kumar </p>-->
+        <!--<p class="card-text writer answer">Answer of the question.</p>-->
+        <!--<a class="nav-link like-dislike" href="#">-->
+            <!--<i class="fa fa-thumbs-up"></i>10</a>-->
+        <!--<a class="nav-link like-dislike writer" href="#">-->
+            <!--<i class="fa fa-thumbs-down"></i>2</a>-->
+        <!--<a href="#" class="btn btn-primary pull-right btnReport">Report</a>-->
+    <!--</div>-->
+<div class="container">
+    <!-- Modal -->
+    <div class="modal fade" id="questionModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Question</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="questionForm" role="form" action="#" th:action="@{/saveQuestion}" method="post">
+
+                        <div class="form-group">
+                                <input type="text" name="value"
+                                       placeholder="Put Your Question" class="form-control" required/>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<script th:inline="javascript">
+
+    $(document).ready(function () {
+
+
+
+    });
+</script>
 </body>
 </html>
