--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -20,6 +20,7 @@
             crossorigin="anonymous"/>
 
     <link th:href="@{css/style.css}" rel="stylesheet"/>
+
 </head>
 
 <body class="gray-bg">
@@ -54,10 +55,6 @@
                                  class="alert alert-danger" role="alert"
                                  th:text="${alreadyRegisteredMessage}"></div>
 
-                            <div th:if="${alreadyRollNoMessage}"
-                                 class="alert alert-danger" role="alert"
-                                 th:text="${alreadyRollNoMessage}"></div>
-
                             <div th:if="${#fields.hasErrors('firstName')}"
                                  th:errors="*{firstName}"
                                  class="validation-message alert alert-danger" role="alert"></div>
@@ -72,10 +69,6 @@
 
                             <div th:if="${#fields.hasErrors('password')}"
                                  th:errors="*{password}"
-                                 class="validation-message alert alert-danger" role="alert"></div>
-
-                            <div th:if="${#fields.hasErrors('rollNo')}"
-                                 th:errors="*{rollNo}"
                                  class="validation-message alert alert-danger" role="alert"></div>
 
                             <div th:if="${#fields.hasErrors('username')}"
@@ -115,32 +108,24 @@
                                       aria-hidden="true"></span>
                             </div>
 
-
-                            <div class="form-group input-group has-feedback">
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-user"></span>
-          </span>
-                                <input type="text" th:field="*{rollNo}"
-                                       placeholder="Roll No" class="form-control" required/>
-                                <span class="glyphicon form-control-feedback"
-                                      aria-hidden="true"></span>
-                            </div>
                             <div class="form-group input-group has-feedback">
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-leaf"></span>
           </span>
                                 <select th:field="*{branch}" placeholder="Branch" class="form-control" required>
+                                    <option value="">Select Branch</option>
                                     <option value="CSS">CSS</option>
                                     <option value="ELECTRONICS">ELECTRONICS</option>
                                 </select>
                                 <span class="glyphicon form-control-feedback"
                                       aria-hidden="true"></span>
                             </div>
-<div class="form-group input-group has-feedback">
+                            <div class="form-group input-group has-feedback">
           <span class="input-group-addon">
-            <span class="glyphicon glyphicon-leaf"></span>
+            <span class="glyphicon glyphicon-eye-open"></span>
           </span>
                                 <select th:field="*{role}" placeholder="Role" class="form-control" required>
+                                    <option value="">Select Role</option>
                                     <option value="Student">STUDENT</option>
                                     <option value="ELECTRONICS">TEACHER</option>
                                 </select>
