--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -54,6 +54,9 @@
                             <div th:if="${alreadyRegisteredMessage}"
                                  class="alert alert-danger" role="alert"
                                  th:text="${alreadyRegisteredMessage}"></div>
+                            <div th:if="${alreadyUNameMessage}"
+                                 class="alert alert-danger" role="alert"
+                                 th:text="${alreadyUNameMessage}"></div>
 
                             <div th:if="${#fields.hasErrors('firstName')}"
                                  th:errors="*{firstName}"
@@ -110,24 +113,25 @@
 
                             <div class="form-group input-group has-feedback">
           <span class="input-group-addon">
-            <span class="glyphicon glyphicon-leaf"></span>
-          </span>
-                                <select th:field="*{branch}" placeholder="Branch" class="form-control" required>
-                                    <option value="">Select Branch</option>
-                                    <option value="CSS">CSS</option>
-                                    <option value="ELECTRONICS">ELECTRONICS</option>
-                                </select>
-                                <span class="glyphicon form-control-feedback"
-                                      aria-hidden="true"></span>
-                            </div>
-                            <div class="form-group input-group has-feedback">
-          <span class="input-group-addon">
             <span class="glyphicon glyphicon-eye-open"></span>
           </span>
                                 <select th:field="*{role}" placeholder="Role" class="form-control" required>
                                     <option value="">Select Role</option>
                                     <option value="Student">STUDENT</option>
-                                    <option value="ELECTRONICS">TEACHER</option>
+                                    <option value="Teacher">TEACHER</option>
+                                </select>
+                                <span class="glyphicon form-control-feedback"
+                                      aria-hidden="true"></span>
+                            </div>
+
+                            <div class="form-group input-group has-feedback">
+          <span class="input-group-addon">
+            <span class="glyphicon glyphicon-leaf"></span>
+          </span>
+                                <select th:field="*{branch}" placeholder="Branch" class="form-control" >
+                                    <option value="">Select Branch</option>
+                                    <option value="CSS">CSS</option>
+                                    <option value="ELECTRONICS">ELECTRONICS</option>
                                 </select>
                                 <span class="glyphicon form-control-feedback"
                                       aria-hidden="true"></span>
@@ -174,6 +178,8 @@
 
 <!-- Bootstrap Validator plugin -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
+
+
 
 
 </body>
